arr-stack/radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - port: 7878
    targetPort: 7878
