arr-stack/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  labels:
    app.kubernetes.io/name: radarr-ingress
spec:
  rules:
  - host: radarr.dubyatp.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: radarr
            port: 
              number: 7878
